--- a/index.html
+++ b/index.html
@@ -3,32 +3,44 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Documento</title>
+        <title>Página inicial</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Everton.css">
     </head>
     <body>
-        <h1>Sobre</h1>
+        <h1>ETMI TECH</h1>
+
+        <h2>Sobre</h2>
+
         <p>
             <strong>
                 O Governo do Ceará, por meio da Secretaria de Educação(Seduc)
             </strong>, iniciou, em 2016, a impolantação do ENSINO MÉDIO em tempo integral nas escolas estaduas. Atualmente, a rede publuca conta com <strong><i>"261 Escolas de Ensino Médio em tempo integral(EEMTis) distribuidas em 130 municípios cearenses."</i></strong>
         </p>
-        <p>
-            A Escola de Ensino Médio em tempo integral (EEMTis) está concebida como comunidade de apredeizagem, Ou seja, alunos, escolas e comunidade estabelecem objetivos comuns e implementam ações baeseadas em evidências cientificas para alcançar a máxima apredeizagem para todos e a melhoria da convivência entre todos.  
-        </p>
-        <p>
-            A ampliação da jornada escolar convierge com o papel de todos os envolvidos no processo educativo, familiar, proficional, funcionârios e comunidade.
-        </p>
-        <p>
-            A oferta das eletivas é  estruturada levando em consideração as quartos áreas de comhecimento (linguagen e suas tecnologias) mais a formação profissional, de modos a possibilidade aos alunis e estruturação dee seu intinerario formativo e uma reflexão sua trajetoria acadêmia, que sera desenhada por suas escolhas e interresses.
-        </p>
-        <p>
+
+        <h2>#Tempo integral</h2>
+
+       <p>
             Cada escola de tempo integral oferta uma jornada de nove horas, garantindo três refeições diária. O curriculo é composto por 30 horas semanais de disciplinhas da base comum a todos estudandes e 15 horas na prate flexivel, sendo que 10 são escolhidas pelo alunos.  
         </p>
+
+        <h2>#Modelo de Aprendizagem</h2>
+
         <p>
             Este modelo de ensino aumenta o tempo escolar e ampleia as oprotunidades de apredeizagem que favorecem o desenvolvimento de competências cogntivas e socioemocinais, além do protagonismo estudantil por meio de escolhas de componetes curriculares eletivos. 
         </p>
+
+        <!--<p>
+            A Escola de Ensino Médio em tempo integral (EEMTis) está concebida como comunidade de apredeizagem, Ou seja, alunos, escolas e comunidade estabelecem objetivos comuns e implementam ações baeseadas em evidências cientificas para alcançar a máxima apredeizagem para todos e a melhoria da convivência entre todos.  
+        </p>
+
+        <p>
+            A ampliação da jornada escolar convierge com o papel de todos os envolvidos no processo educativo, familiar, proficional, funcionârios e comunidade.
+        </p>
+
+        <p>
+            A oferta das eletivas é  estruturada levando em consideração as quartos áreas de comhecimento (linguagen e suas tecnologias) mais a formação profissional, de modos a possibilidade aos alunis e estruturação dee seu intinerario formativo e uma reflexão sua trajetoria acadêmia, que sera desenhada por suas escolhas e interresses.
+        </p>-->
     </body>
 </html>
