--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <link rel="stylesheet" href="Everton.css">
     </head>
     <body>
+        <img src="logo.jpg" id="logo" alt="Texto alternativo" title="legenda"/>
         <h1>ETMI TECH</h1>
+        
+        <img src="eemti.jpg" id ="banner-principla">
+        <img src="banner.jpg" class="banner">
 
         <h2>Sobre</h2>
 
