--- a/login.html
+++ b/login.html
@@ -9,13 +9,13 @@
 <body>
     <div>
         <img src="krystal-fox.jpeg" class="foto">
-        <h1>login</h1>
+        <h1>Login</h1>
         <form class="login">
-            <label>informe sua senha</label>
+            <label>Informe sue email</label>
             <input type="email" placeholder="Digite seu e-mail">
-            <label>informe sua senha</label>
+            <label>Informe sua senha</label>
             <input type="password" placeholder="Digite sua senha">
-            <button>cadastra conta</button>
+            <button>Cadastra conta</button>
             <p class="cadastor">Não tem cadastor?
             <a href="fox.html">Cadastrise</a></p>
         </form>
