--- a/bo.html
+++ b/bo.html
@@ -29,7 +29,7 @@
         .menu a{
             text-decoration: none;
             padding: 15px;
-            color: blue
+            color: blue;
             text-align: center;
         }
         .centro{
