--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
     </head>
     <body>
         <header>
-        <img src="logo.jpg" id="logo" alt="Texto alternativo" title="legenda"/>
-        <h1>ETMI TECH</h1>
-        <nav></nav>
+         <img src="governo.png" id="logo" alt="Texto alternativo" title="legenda"/> 
+
+        <nav class="menu">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="https://www.seduc.ce.gov.br/">Seduc</a></li>
+                <li><a href="#rodape">Ancora</a></li>
+                <li><a href="escola.html">Escola</a></li>
+            </ul>
+        </nav>
         </header>
         <main>
             <section>
-                <img src="eemti.jpg" id ="banner-principal">
+                <img src="logo.jpg" id ="banner-principal">
             </section>
-            <section>
-                <article>
-                    <img src="banner.jpg" class="banner">
+            <section class="container">
+                <article class="conteudo">
+                    <img src="eemti.jpg" class="banner">
                         <h2>Sobre</h2>
                         <p>
                         <strong>
@@ -28,24 +35,29 @@
                         </strong>, iniciou, em 2016, a impolantação do ENSINO MÉDIO em tempo integral nas escolas estaduas. Atualmente, a rede publuca conta com <strong><i>"261 Escolas de Ensino Médio em tempo integral(EEMTis) distribuidas em 130 municípios cearenses."</i></strong>
                         </p>
                 </article>
-                <article>
-                    <img src="banner.jpg" class="banner">
+                <article class="conteudo">
+                    <img src="eemti.jpg" class="banner">
                     <h2>#Tempo integral</h2>
                     <p>
                     Cada escola de tempo integral oferta uma jornada de nove horas, garantindo três refeições diária. O curriculo é composto por 30 horas semanais de disciplinhas da base comum a todos estudandes e 15 horas na prate flexivel, sendo que 10 são escolhidas pelo alunos.  
                     </p>
                 </article>
-                <article>
-                    <img src="banner.jpg" class="banner">
+                <article class="conteudo">
+                    <img src="eemti.jpg" class="banner">
                     <h2>#Modelo de Aprendizagem</h2>
                     <p>
                     Este modelo de ensino aumenta o tempo escolar e ampleia as oprotunidades de apredeizagem que favorecem o desenvolvimento de competências cogntivas e socioemocinais, além do protagonismo estudantil por meio de escolhas de componetes curriculares eletivos. 
                     </p>
                 </article>
             </section>
-            <section></section>
+            <section id="video">
+                <div class="container">
+                    <!-- <img src="banner.jpg" alt=""> -->
+                     <iframe width="560" height="315" src="https://www.youtube.com/watch?v=qFWTJIW9oaU" title="EMTI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encyrpted-nedia; gytoscope; picture-in-picture; wed-share" allowfullscreen></iframe>
+                </div>
+            </section>
         </main>
-        <footer>
+        <footer id="rodape">
             <p>
                &copy; 2017 - 2023 - GOVERNO DO ESTADO DO CEARÁ TODOS OS DIREITOS RESERVADOS
             </p>
