--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
             </section>
             <section id="video">
                 <div class="container">
-                    <!-- <img src="banner.jpg" alt=""> -->
-                     <iframe width="560" height="315" src="https://www.youtube.com/watch?v=qFWTJIW9oaU" title="EMTI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encyrpted-nedia; gytoscope; picture-in-picture; wed-share" allowfullscreen></iframe>
+                    <img src="eemti.jpg" alt="">
                 </div>
+                     <iframe width="560" height="315" src="https://www.youtube.com/embed/dOPjtGsiGLw" title="EMTI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encyrptedmedia; gyroscope; picture-in-picture; wed-share" allowfullscreen></iframe>
+                
             </section>
         </main>
         <footer id="rodape">
