--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="https://www.seduc.ce.gov.br/">Seduc</a></li>
                 <li><a href="#rodape">Ancora</a></li>
-                <li><a href="escola.html">Escola</a></li>
+                <li><a href="escola.html"> Equipe escolar</a></li>
             </ul>
         </nav>
         </header>
